# pytorch

./: .gitattributes  .gitignore  .gitmodules  .lintrunner.toml  AI_POLICY.md  BUCK.oss  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASE.md  build_variables.bzl  codex_setup.sh  defs.bzl  pyproject.toml  pyrefly.toml  pytest.ini  requirements-build.txt  requirements.txt  setup.py
.ci/docker/: build.sh  requirements-ci.txt
.ci/macwheel/: build.sh  build_all_macos_wheels.sh  build_env_setup.py  build_install_deps.py
.ci/magma/: Makefile
.ci/manywheel/: build_env_setup.py  build_install_deps.py  repair_wheel.py
.ci/pytorch/: binary_linux_test.sh  binary_populate_env.sh  build.sh  common_utils.sh  macos-build.sh  multigpu-test.sh  test.sh  test_fa3_abi_stable.sh
.github/: actionlint.yaml  allowlist.yml  arc.yaml  labeler.yml  merge_rules.yaml  pytorch-probot.yml
.github/ISSUE_TEMPLATE/: blank.md  bug-report.yml  disable-autorevert.md  documentation.yml  feature-request.yml  pt2-bug-report.yml
.github/PULL_REQUEST_TEMPLATE/: docs_typo.md  fix_issue.md  preapproved.md
.github/ci_commit_pins/: fbgemm_rocm.txt  torch_tpu.txt  torchcomms.txt  torchtitan.txt  vision.txt  vllm.txt
.github/scripts/: build_triton_wheel.py  file_io_utils.py  generate_binary_build_matrix.py  lintrunner.sh  runner_determinator.py  test_runner_determinator.py  test_trymerge.py  trymerge.py
.github/templates/: linux_binary_build_workflow.yml.j2  macos_binary_build_workflow.yml.j2  windows_binary_build_workflow.yml.j2
.github/workflows/: _binary-build-flash-attention-wheel-linux.yml  _binary-build-flash-attention-wheel-windows.yml  _binary-test-linux.yml  _binary-test-macos.yml  _binary-upload-flash-attention-wheel.yml  _docs.yml  _get-changed-files.yml  _linux-build.yml  _linux-test-stable-fa3.yml  _linux-test.yml  _rocm-test.yml  _runner-determinator.yml  _s390x-build.yml  _s390x-test.yml  _tpu-test.yml  _vllm-benchmark.yml  _vllm-build.yml  _win-build.yml  assigntome-docathon.yml  attention_op_microbenchmark.yml  auto_request_review.yml  b200-distributed.yml  b200-symm-mem.yml  build-almalinux-images.yml  build-magma-linux.yml  build-manywheel-images.yml  build-triton-wheel.yml  build-vllm-wheel.yml  check_mergeability_ghstack.yml  cherry-pick.yml  claude-autorevert-advisor.yml  claude-code.yml  claude-distributed-triage-cron.yml  claude-distributed-triage.yml  claude-issue-triage-run.yml  claude-issue-triage.yml  close-nonexistent-disable-issues.yml  create_release.yml  delete_old_branches.yml  docathon-sync-label.yml  (+80 more)
.spin/: cmds.py
android/: README.md
aten/: CMakeLists.txt
benchmarks/dynamo/: check_accuracy.py  launch_compile_op_numerics.py  parse_logs.py  summarize_perf.py  timm_models.yaml
benchmarks/gpt_fast/: benchmark.py
benchmarks/operator_benchmark/: aarch64_expected_ci_operator_benchmark_eager_float32_cpu.csv  x86_64_expected_ci_operator_benchmark_eager_float32_cpu.csv
benchmarks/sparse/: test_csr.sh
c10/: CMakeLists.txt
c10/core/: CachingDeviceAllocator.h  SymbolicShapeMeta.cpp  SymbolicShapeMeta.h  TensorImpl.cpp
c10/cuda/: CMakeLists.txt  CUDACachingAllocator.cpp  CUDACachingAllocator.h  driver_api.cpp  driver_api.h
c10/metal/: utils.h
c10/util/: Array.h  ArrayRef.h  OptionalArrayRef.h  StringUtil.h  intrusive_ptr.h  llvmMathExtras.h  overflows.h  signal_handler.cpp
c10/xpu/: CMakeLists.txt
caffe2/: CMakeLists.txt
caffe2/perfkernels/: hp_emblookup_codegen.py
cmake/: Caffe2Config.cmake.in  Codegen.cmake  Dependencies.cmake  EnvVarForwarding.cmake  FileMirroring.cmake  Metal.cmake  PreBuildSteps.cmake  ProtoBuf.cmake  ProtoBufPatch.cmake  Summary.cmake  TcMalloc.cmake  TorchConfig.cmake.in
cmake/Modules/: FindAVX.cmake  FindMAGMA.cmake  FindOpenMP.cmake  FindSanitizer.cmake
cmake/public/: LoadHIP.cmake  cuda.cmake  mkldnn.cmake  utils.cmake
docs/: libtorch.rst
docs/source/: autograd.md  backends.md  conf.py  cuda.md  distributed.checkpoint.md  distributed.md  distributed.tensor.md  dlpack.md  hub.md  logging.md  mobile_optimizer.md  tensorboard.md  torch.compiler_api.md  utils.md
functorch/: COMPILE_README.md
functorch/dim/: README.md
scripts/: lint_urls.sh  write_metallib_headers.py
scripts/hud/: analyze_failing_jobs.py
scripts/release/: apply-release-changes.sh
scripts/release_notes/: commitlist.py  common.py  remove_cherry_picks.py
test/: conftest.py  run_test.py  test_accelerator.py  test_autocast.py  test_autograd.py  test_binary_ufuncs.py  test_bmm_outer_product.py  test_compile_benchmark_util.py  test_complex.py  test_cpp_extensions_jit.py  test_cuda.py  test_cuda_graph_utils.py  test_custom_ops.py  test_decomp.py  test_determination.py  test_dispatch.py  test_dlpack.py  test_dynamic_shapes.py  test_fake_tensor.py  test_flop_counter.py  test_foreach.py  test_functionalization.py  test_fx.py  test_fx_passes.py  test_indexing.py  test_jit.py  test_linalg.py  test_logging.py  test_matmul_cuda.py  test_meta.py  test_mkldnn.py  test_mobile_optimizer.py  test_modules.py  test_mps.py  test_multiprocessing.py  test_namedtuple_return_api.py  test_native_mha.py  test_nestedtensor.py  test_nn.py  test_numpy_interop.py  (+35 more)
test/autograd/: test_functional.py
test/complex_tensor/: test_complex_tensor.py  utils.py
test/cpp_extensions/: test_libtorch_agnostic.py
test/distributed/: c10d_backend_common.py  test_aten_comm_compute_reordering.py  test_c10d_collectives.py  test_c10d_common.py  test_c10d_cuda_graphs.py  test_c10d_fault_tolerance.py  test_c10d_fr_hook.py  test_c10d_gloo.py  (+28 more)
tools/: README.md  build_libtorch.py  build_trace_summary.py  download_mnist.py  gen_cupti_stubs.py  git_add_generated_dirs.sh  git_reset_generated_dirs.sh
torch/: CMakeLists.txt  __init__.py  _custom_class_base.py  _guards.py  _jit_internal.py  _meta_registrations.py  _opaque_base.py  _ops.py  _precompile.py  _precompile_driver.py  _tensor.py  _tensor_docs.py  _tensor_str.py  _torch_docs.py  _utils.py  _utils_internal.py  _vmap_internals.py  _weights_only_unpickler.py  extension.h  overrides.py  serialization.py  storage.py
(+1334 files in other folders)
